--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "bangbangboom-game": "https://github.com/K024/bangbangboom-game.git#7ea2be3",
     "core-js": "^3.6.5",
+    "socket.io-client": "^2.3.0",
     "three": "^0.118.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xterm": "^4.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
